Swagger API Document

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,15 @@
 <!--            <version>5.5.13</version>-->
 <!--        </dependency>-->
 
+
+<!--        API Document-->
+        <!-- Swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
 
 
