--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 mybatis-plus:
   global-config:
     db-config:
@@ -14,4 +13,9 @@ spring:
       url: jdbc:mysql://localhost:3306/Manage_system?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
       username: root
       password: 123456
+
+#swagger 报错
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
