--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,19 @@
             <version>3.0.0</version>
         </dependency>
 
+
+         <dependency>
+             <groupId>com.auth0</groupId>
+             <artifactId>java-jwt</artifactId>
+             <version>3.4.0</version>
+         </dependency>
+
+         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+         </dependency>
+
     </dependencies>
 
 
