--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -87,12 +86,12 @@
             <artifactId>poi</artifactId>
             <version>5.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+        	<artifactId>poi-ooxml</artifactId>
+        	<version>5.0.0</version>
+        </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.itextpdf</groupId>-->
-<!--            <artifactId>itextpdf</artifactId>-->
-<!--            <version>5.5.13</version>-->
-<!--        </dependency>-->
 
 
 <!--        API Document-->
