--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>com.e-iceblue</id>
+            <name>e-iceblue</name>
+            <url>https://repo.e-iceblue.cn/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -92,8 +100,11 @@
         	<version>5.0.0</version>
         </dependency>
 
-
-
+       <dependency>
+            <groupId>e-iceblue</groupId>
+            <artifactId>spire.office.free</artifactId>
+            <version>5.3.1</version>
+       </dependency>
 <!--        API Document-->
         <!-- Swagger -->
         <dependency>
