--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,4 +20,10 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  servlet:
+      multipart:
+        max-request-size: 10MB
+        max-file-size: 10MB
+file:
+  path: D:/File/
 
