--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,5 +25,5 @@ spring:
         max-request-size: 10MB
         max-file-size: 10MB
 file:
-  path: D:/File/
+  path: /home/user/Documents/项目/Manage_system_bg/
 
