--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.47</version>
          </dependency>
+         <dependency>
+             <groupId>com.fasterxml.jackson.core</groupId>
+             <artifactId>jackson-databind</artifactId>
+             <version>2.12.5</version>
+         </dependency>
 
     </dependencies>
 
