--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,15 @@
             <scope>test</scope>
         </dependency>
 
-<!--        单元测试-->
+        <!-- Sa-Token 权限认证, 在线文档：https://sa-token.cc/ -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>1.34.0</version>
+        </dependency>
+
+
+        <!--        单元测试-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
