--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,15 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### 隐藏存储用户上传文件的文件夹 ###
 /teachingPro/
 /indexPoint/
+
+### 单元测试代码 ###
+
 /src/test/
+
+### 代码生成的临时文件 ###
 /workbook.pdf
 /workbook.xls
