--- a/pom.xml
+++ b/pom.xml
@@ -108,11 +108,11 @@
         	<version>5.0.0</version>
         </dependency>
 
-                <dependency>
-                    <groupId>net.sourceforge.jexcelapi</groupId>
-                    <artifactId>jxl</artifactId>
-                    <version>2.6.12</version>
-                </dependency>
+        <dependency>
+             <groupId>net.sourceforge.jexcelapi</groupId>
+             <artifactId>jxl</artifactId>
+             <version>2.6.12</version>
+        </dependency>
 
        <dependency>
             <groupId>e-iceblue</groupId>
@@ -144,6 +144,11 @@
              <artifactId>jackson-databind</artifactId>
              <version>2.12.5</version>
          </dependency>
+
+
+<!--           word转pdf测试-->
+
+
 
     </dependencies>
 
