--- a/pom.xml
+++ b/pom.xml
@@ -63,31 +63,19 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Sa-Token 权限认证, 在线文档：https://sa-token.cc/ -->
+<!-- Sa-Token 权限认证, 在线文档：https://sa-token.cc/ -->
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>1.34.0</version>
         </dependency>
 
-
-        <!--        单元测试-->
+<!--        单元测试-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-
-<!--        安全框架-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.security</groupId>-->
-<!--            <artifactId>spring-security-test</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
 
 <!--        数据库连接池-->
         <dependency>
@@ -107,19 +95,28 @@
         	<artifactId>poi-ooxml</artifactId>
         	<version>3.15</version>
         </dependency>
-
-
         <dependency>
              <groupId>net.sourceforge.jexcelapi</groupId>
              <artifactId>jxl</artifactId>
              <version>2.6.12</version>
         </dependency>
 
+<!--  使用Spire.office.free-->
        <dependency>
             <groupId>e-iceblue</groupId>
             <artifactId>spire.office.free</artifactId>
             <version>5.3.1</version>
        </dependency>
+<!--   引入第三方Spire.doc-->
+<!--         <dependency> -->
+<!--              <groupId>com.spire</groupId> -->
+<!--              <artifactId>spirej.doc.cracked</artifactId> -->
+<!--              <version>11.4.2</version> -->
+<!--              <scope>system</scope> -->
+<!--              <systemPath>${project.basedir}/src/main/resources/lib/spirej.doc.cracked-11.4.2.jar</systemPath> -->
+<!--         </dependency> -->
+
+
 <!--        API Document-->
         <!-- Swagger -->
         <dependency>
@@ -146,11 +143,6 @@
              <version>2.12.5</version>
          </dependency>
 
-
-<!--           word转pdf测试-->
-
-
-
     </dependencies>
 
 
@@ -169,6 +161,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
             </plugin>
         </plugins>
     </build>
