application.yml新增日志导出规则配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,24 +3,32 @@ mybatis-plus:
     db-config:
       id-type: auto
 
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+# 用于生产开发环境打印 sql 日志
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-#      url: jdbc:mysql://43.140.201.70:3306/Manage_system?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+      #      url: jdbc:mysql://43.140.201.70:3306/Manage_system?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
       #使用本地数据库
       url: jdbc:mysql://localhost:3306/Manage_system?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
       username: root
       password: 123456
 
-#swagger 报错
+  #swagger 报错
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
   servlet:
-      multipart:
-        max-request-size: 10MB
-        max-file-size: 10MB
+    multipart:
+      max-request-size: 10MB
+      max-file-size: 10MB
+
+server:
+  port: 8080
+
+logging:
+  level:
+    root: error
