--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       #      url: jdbc:mysql://43.140.201.70:3306/Manage_system?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
       #使用本地数据库
-      url: jdbc:mysql://localhost:3306/manage_system?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://localhost:3306/Manage_system?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
       username: root
       password: 123456
 
