--- a/pom.xml
+++ b/pom.xml
@@ -22,17 +22,28 @@
         <repository>
             <id>com.e-iceblue</id>
             <name>e-iceblue</name>
-            <url>https://repo.e-iceblue.cn/repository/maven-public/</url>
+            <!--            <url>https://repo.e-iceblue.cn/repository/maven-public/</url>-->
+            <url>https://repo.e-iceblue.com/nexus/content/groups/public/</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
+
+            <groupId>cn.hutool</groupId>
+
+            <artifactId>hutool-all</artifactId>
+
+            <version>5.8.0</version>
+
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-<!--        使用mybatis 或 mybatis-plus-->
+        <!--        使用mybatis 或 mybatis-plus-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -44,14 +55,14 @@
             <version>3.5.1</version>
         </dependency>
 
-<!--        mysql连接-->
+        <!--        mysql连接-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
 
-<!--        lombok简化开发-->
+        <!--        lombok简化开发-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -63,28 +74,28 @@
             <scope>test</scope>
         </dependency>
 
-<!-- Sa-Token 权限认证, 在线文档：https://sa-token.cc/ -->
+        <!-- Sa-Token 权限认证, 在线文档：https://sa-token.cc/ -->
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>1.34.0</version>
         </dependency>
 
-<!--        单元测试-->
+        <!--        单元测试-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
 
-<!--        数据库连接池-->
+        <!--        数据库连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.9</version>
         </dependency>
 
-<!--        Apache POI-->
+        <!--        Apache POI-->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
@@ -92,37 +103,38 @@
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
-        	<artifactId>poi-ooxml</artifactId>
-        	<version>3.15</version>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.15</version>
         </dependency>
         <dependency>
-             <groupId>net.sourceforge.jexcelapi</groupId>
-             <artifactId>jxl</artifactId>
-             <version>2.6.12</version>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
         </dependency>
 
-<!--  使用Spire.office.free-->
-       <dependency>
+        <!--  使用Spire.office.free-->
+        <dependency>
             <groupId>e-iceblue</groupId>
             <artifactId>spire.office.free</artifactId>
             <version>5.3.1</version>
-       </dependency>
-<!--   引入第三方Spire.doc-->
-        <dependency>
-             <groupId>com.spire</groupId>
-             <artifactId>spire.office.cracked</artifactId>
-             <version>3.7.3</version>
-             <scope>system</scope>
-             <systemPath>${project.basedir}/src/main/resources/lib/spirej.doc.cracked-11.4.2.jar</systemPath>
         </dependency>
-<!--  使用JFreeChart绘制图像-->
+        <!--   引入第三方Spire.doc-->
+        <dependency>
+            <groupId>com.spire</groupId>
+            <artifactId>spire.office.cracked</artifactId>
+            <version>3.7.3</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/lib/spirej.doc.cracked-11.4.2.jar</systemPath>
+        </dependency>
+
+        <!--  使用JFreeChart绘制图像-->
         <dependency>
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.5.3</version>
         </dependency>
 
-<!--        API Document-->
+        <!--        API Document-->
         <!-- Swagger -->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -131,24 +143,25 @@
         </dependency>
 
 
-         <dependency>
-             <groupId>com.auth0</groupId>
-             <artifactId>java-jwt</artifactId>
-             <version>3.4.0</version>
-         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
 
-         <dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.47</version>
-         </dependency>
-         <dependency>
-             <groupId>com.fasterxml.jackson.core</groupId>
-             <artifactId>jackson-databind</artifactId>
-             <version>2.12.5</version>
-         </dependency>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.5</version>
+        </dependency>
 
     </dependencies>
+
 
 
     <build>
